Refactor notebook sections with markdown headers

--- a/notebooks/rankings_stats_table_merge.ipynb
+++ b/notebooks/rankings_stats_table_merge.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports and data loading\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "id": "40447c09-6c8b-42db-aa75-2a03347c9482",
@@ -73,6 +80,13 @@
     "### Map the teamnames from stats of the files to the ranking file\n",
     "\n",
     "RECOMMENDATION: Utilize LLM tools to match the files initially and do the rest by hand (if LLMs don't work for the stragglers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Manual name mapping table\n"
    ]
   },
   {
@@ -311,9 +325,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apply manual name mapping\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9808ff01-7468-42b5-ad75-b37477a6b62b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,11 +348,41 @@
     "    right_on='School',\n",
     "    how='left'\n",
     ")\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Split matched vs. unmatched rows\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# For remaining unmatched teams, try normalized matching\n",
     "unmatched = merged_df[merged_df['Rank'].isna()]\n",
     "matched = merged_df[~merged_df['Rank'].isna()]\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normalize names for fuzzy matching\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create normalized columns for matching\n",
     "rankings_df['NormalizedName'] = rankings_df['School'].apply(normalize_team_name)\n",
     "unmatched['NormalizedMappedName'] = unmatched['MappedTeamName'].apply(normalize_team_name)\n",
@@ -346,12 +396,42 @@
     "    if norm_name in norm_to_orig:\n",
     "        return norm_to_orig[norm_name]\n",
     "    return None, None\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Apply normalized matching\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Apply matching\n",
     "unmatched['MatchedInfo'] = unmatched['NormalizedMappedName'].map(find_match)\n",
     "unmatched['MatchedSchool'] = unmatched['MatchedInfo'].map(lambda x: x[0] if x and x[0] is not None else None)\n",
     "unmatched['MatchedRank'] = unmatched['MatchedInfo'].map(lambda x: x[1] if x and x[1] is not None else None)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combine match results\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Combine the results\n",
     "unmatched_final = unmatched.drop(['School', 'Rank', 'NormalizedMappedName', 'MatchedInfo'], axis=1, errors='ignore')\n",
     "unmatched_final = unmatched_final.rename(columns={'MatchedSchool': 'School', 'MatchedRank': 'Rank'})\n",
@@ -360,7 +440,22 @@
     "\n",
     "# Concatenate the matched and newly matched data\n",
     "final_df = pd.concat([matched_final, unmatched_final], ignore_index=True)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Finalize columns and sorting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Add the Rank as 'Ranking' column but keep only one team name\n",
     "# Use the 'School' from rankings when available, otherwise keep original TeamName\n",
     "final_df['TeamNameFinal'] = final_df['School'].fillna(final_df['TeamName'])\n",
@@ -385,7 +480,22 @@
     "result_df = result_df.sort_values('Ranking')\n",
     "\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Review matching success\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Check how many teams were successfully matched\n",
     "matched_count = result_df['Ranking'].notna().sum()\n",
     "total_count = len(result_df)\n",
@@ -396,6 +506,13 @@
     "print(f\"\\nUnmatched teams ({len(unmatched_teams)}):\")\n",
     "if unmatched_teams:\n",
     "    print(unmatched_teams[:10])  # Show just the first 10 unmatched teams"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validate missing values\n"
    ]
   },
   {
@@ -445,6 +562,13 @@
     "#result_df = result_df.dropna()\n",
     "#has_na = result_df.isna().any().any()\n",
     "#print(f\"Has NA values: {has_na}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preview merged dataset\n"
    ]
   },
   {
@@ -740,7 +864,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>360 rows × 19 columns</p>\n",
+       "<p>360 rows \u00d7 19 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -825,10 +949,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Assign quadrant labels\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "970f076f-d7f1-4895-b3fc-0b50dbd012d0",
    "metadata": {},
    "source": [
     "### Add the \"Quadrant\" for each team"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export merged dataset\n"
    ]
   },
   {
@@ -1136,7 +1274,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>360 rows × 20 columns</p>\n",
+       "<p>360 rows \u00d7 20 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1230,6 +1368,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load prior season data\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "3b6956f9-a24d-45d0-87b5-c7406e29783b",
@@ -1237,6 +1382,13 @@
    "outputs": [],
    "source": [
     "result_df.to_csv('ncaa_data_W_24_to_25.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Combine seasons\n"
    ]
   },
   {
@@ -1249,25 +1401,6 @@
     "df1 = pd.read_csv('ncaa_data_W_23_to_24.csv')\n",
     "df2 = pd.read_csv('ncaa_data_W_24_to_25.csv')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "d570910e-46a4-4473-89a5-a8734ad03312",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ncaa_data_all = pd.concat([df1, df2], axis=0)\n",
-    "ncaa_data_all.to_csv('ncaa_data_W_all.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f792d5bb-85ef-446b-acc9-55821e5a0e39",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
