--- a/notebooks/scrape_ncaa_games_2025.ipynb
+++ b/notebooks/scrape_ncaa_games_2025.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "2bec010a-833c-4ebc-8377-0733dc61335a",
@@ -27,9 +34,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parse and expand game data\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e99c71f2-08c7-4e5a-a94e-609d1e682dad",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +134,22 @@
     "    all_records = pd.concat([team1_records, team2_records])\n",
     "    \n",
     "    return all_records\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate team statistics\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def generate_team_stats(games_df, cutoff_date=None):\n",
     "    \"\"\"\n",
     "    Generate stats for each team including their performance by location\n",
@@ -267,6 +295,13 @@
     "    \n",
     "    return result_df\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run season stats extraction\n"
    ]
   },
   {
@@ -558,7 +593,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>362 rows × 18 columns</p>\n",
+       "<p>362 rows \u00d7 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -647,6 +682,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export stats snapshot\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "94ff096f-8ae1-4a1c-a953-4f7065bc3ea3",
@@ -654,6 +696,13 @@
    "outputs": [],
    "source": [
     "date_stats.to_csv(\"select_sun_W_stats2025.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validate missing values\n"
    ]
   },
   {
@@ -707,6 +756,13 @@
     "### Scraping NET ranking from NCAA\n",
     "\n",
     "When scraping use archive.org to find NET rankings from "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fetch NET rankings tables\n"
    ]
   },
   {
@@ -785,6 +841,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save NET rankings outputs\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "156c00ca-fe0f-429e-9b52-701c9dd420f3",
@@ -806,9 +869,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Team performance analysis helpers\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4feb7083-0a50-4016-8a53-8048333aed4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -859,7 +928,22 @@
     "        print(f\"Performance Analysis for {team_name} (ID: {team_id})\")\n",
     "    \n",
     "    return team_games\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Advanced metric calculations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def calculate_advanced_metrics(team_stats_df):\n",
     "    \"\"\"\n",
     "    Calculate advanced metrics for teams.\n",
@@ -891,7 +975,22 @@
     "    # Additional metrics can be added here\n",
     "    \n",
     "    return df\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Team comparison helpers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def compare_teams(advanced_stats_df, team_ids, metric_columns=None):\n",
     "    \"\"\"\n",
     "    Compare specific teams across various metrics.\n",
@@ -921,7 +1020,22 @@
     "        comparison_df = comparison_df[['TeamID'] + metric_columns]\n",
     "    \n",
     "    return comparison_df\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Win percentage visualization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def visualize_win_percentages(advanced_stats_df, top_n=25):\n",
     "    \"\"\"\n",
     "    Create a visualization of win percentages for top teams.\n",
@@ -961,7 +1075,22 @@
     "    plt.tight_layout()\n",
     "    \n",
     "    plt.show()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strength of schedule visualization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def visualize_strength_of_schedule(advanced_stats_df, highlight_teams=None):\n",
     "    \"\"\"\n",
     "    Create a scatter plot of win percentage vs strength of schedule.\n",
@@ -1009,7 +1138,22 @@
     "    plt.grid(True, alpha=0.3)\n",
     "    \n",
     "    plt.show()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Date-range analysis helpers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def analyze_team_performance_by_date_range(games_df, start_date, end_date):\n",
     "    \"\"\"\n",
     "    Analyze team performance within a specific date range.\n",
@@ -1032,7 +1176,22 @@
     "    advanced_stats = calculate_advanced_metrics(period_stats)\n",
     "    \n",
     "    return advanced_stats\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Streak identification helpers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def identify_hot_and_cold_streaks(games_df, min_streak_length=3):\n",
     "    \"\"\"\n",
     "    Identify teams with notable win or loss streaks.\n",
@@ -1109,7 +1268,22 @@
     "    streaks_df = streaks_df.sort_values(by=['StreakLength', 'TeamID'], ascending=[False, True])\n",
     "    \n",
     "    return streaks_df\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simple game outcome prediction\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict_game_outcome(team1_id, team2_id, location, advanced_stats_df):\n",
     "    \"\"\"\n",
     "    A simple model to predict game outcomes based on team stats.\n",
@@ -1164,6 +1338,13 @@
     "        },\n",
     "        'PredictedWinner': team1_name if team1_win_prob > team2_win_prob else team2_name\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example usage\n"
    ]
   },
   {
