Add section headers to quadrant notebooks

--- a/notebooks/quadrant_winrate_visualizations.ipynb
+++ b/notebooks/quadrant_winrate_visualizations.ipynb
@@ -1,37 +1,56 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "ec0cc9a6-8c18-4928-b1cf-6df7b4a2867b",
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data visualization complete. All plots have been saved as PNG files.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1000x1000 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "source": [
+    "## Imports and data loading\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load dataset\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Load the data\n",
     "df = pd.read_csv('ncaa_data_all.csv')\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Win percentages by quadrant and location\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 1. Win Percentages by Quadrant and Location\n",
     "plt.figure(figsize=(12, 8))\n",
     "\n",
@@ -57,7 +76,22 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.savefig('win_percentages_by_quadrant.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Average wins and losses by quadrant\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 2. Average Wins and Losses by Quadrant\n",
     "plt.figure(figsize=(12, 8))\n",
     "\n",
@@ -94,7 +128,22 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.savefig('avg_wins_losses_by_quadrant.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Home court advantage comparison\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 3. Home Court Advantage Comparison\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
@@ -117,7 +166,22 @@
     "plt.legend()\n",
     "plt.savefig('home_advantage_by_quadrant.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Win distribution boxplots\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 4. Win Distribution Boxplots\n",
     "plt.figure(figsize=(14, 10))\n",
     "\n",
@@ -134,7 +198,22 @@
     "plt.ylabel('Number of Wins')\n",
     "plt.savefig('win_distribution_boxplot.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Opponent strength comparison\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 5. Opponent Strength Comparison\n",
     "plt.figure(figsize=(12, 8))\n",
     "\n",
@@ -154,7 +233,22 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.savefig('team_vs_opponent_win_pct.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Venue performance heatmap\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 6. Venue Performance Heatmap\n",
     "plt.figure(figsize=(12, 10))\n",
     "\n",
@@ -177,7 +271,22 @@
     "plt.title('Win Percentage by Venue and Quadrant')\n",
     "plt.savefig('venue_win_pct_heatmap.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Win-loss ratio analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 7. Win-Loss Ratio Analysis\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
@@ -199,7 +308,22 @@
     "plt.legend()\n",
     "plt.savefig('win_loss_ratio_by_quadrant.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Performance radar chart\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 8. Performance Radar Chart\n",
     "plt.figure(figsize=(10, 10))\n",
     "categories = ['Home Win %', 'Away Win %', 'Neutral Win %', 'Total Win %', 'Home Advantage']\n",
@@ -240,7 +364,22 @@
     "plt.title('Performance Radar Chart by Quadrant')\n",
     "plt.savefig('performance_radar_chart.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Summary statistics visualization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 9. Statistical Aggregation and Visualization\n",
     "# Create a comprehensive metrics dataframe\n",
     "metrics_df = pd.DataFrame({\n",
@@ -274,7 +413,22 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.savefig('summary_statistics.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Win percentage by location violin plot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 10. Advanced Analysis - Win Percentage by Location Violinplot\n",
     "plt.figure(figsize=(16, 8))\n",
     "\n",
@@ -306,7 +460,22 @@
     "plt.ylabel('Win Percentage')\n",
     "plt.savefig('win_pct_distribution_violinplot.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Opponent strength analysis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 11. Opponent Strength Analysis\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
@@ -327,7 +496,22 @@
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.savefig('opponent_strength_by_quadrant.png', dpi=300, bbox_inches='tight')\n",
     "plt.close()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Comprehensive visualization dashboard\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 12. Comprehensive Data Visualization Dashboard\n",
     "plt.figure(figsize=(15, 12))\n",
     "\n",
@@ -434,14 +618,6 @@
     "\n",
     "print(\"Data visualization complete. All plots have been saved as PNG files.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6b631fe-5c11-49a1-8522-ae3b865a2035",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
